# Celestia-Governance-Dashboard

./: README.md  build_files.sh  celestia.db  database.py  gitignore.txt  grpc_client.py  main.py  pyproject.toml  rest_client.py  styles.py  vercel.json
.streamlit/: config.toml
celestia_proto/: __init__.py  params.proto  params_pb2.py  params_pb2_grpc.py
celestia_proto/cosmos/: __init__.py
celestia_proto/cosmos/auth/module/v1/: module_pb2.py  module_pb2_grpc.py
celestia_proto/cosmos/base/grpc/v2/: service_pb2.py  service_pb2_grpc.py
celestia_proto/cosmos/orm/module/v1alpha1/: module_pb2_grpc.py
celestia_proto/cosmos/orm/v1/: orm_pb2_grpc.py
celestia_proto/cosmos/orm/v1alpha1/: schema_pb2_grpc.py
celestia_proto/cosmos/params/: __init__.py
celestia_proto/cosmos/params/v1beta1/: __init__.py  params.proto  params_pb2.py  params_pb2_grpc.py
celestia_proto/cosmos/query/v1/: query_pb2_grpc.py
celestia_proto/cosmos/reflection/v1/: reflection_pb2.py  reflection_pb2_grpc.py
celestia_proto/cosmos/streaming/v1/: grpc_pb2.py  grpc_pb2_grpc.py
celestia_proto/cosmos/tx/config/v1/: config_pb2.py  config_pb2_grpc.py
celestia_proto/cosmos/validate/module/v1/: module_pb2.py  module_pb2_grpc.py
components/: comparison_view.py  network_status.py  parameter_table.py
scripts/: compile_protos.py
