[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "grpcio-tools>=1.70.0",
    "grpcio>=1.70.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "streamlit>=1.41.1",
    "protobuf>=5.29.3",
    "twilio>=9.4.4",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
]
